# casdoor-dify-plugin

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
endpoints/: casdoor-dify-plugin.py  casdoor-dify-plugin.yaml  casdoor_auth.py  casdoor_callback.yaml  casdoor_login.yaml  casdoor_signup.yaml
group/: casdoor-dify-plugin.yaml
provider/: casdoor.yaml  casdoor_plugin.py
tools/: casdoor_auth.py  casdoor_auth.yaml
