[tool.poetry]
name = "casdoor-dify-plugin"
version = "0.1.0"
description = ""
authors = ["MohmdFo <mohammad.fotouhi80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
flask = ">=3.0.3,<3.1.0"
requests = "^2.32.3"
pyjwt = "^2.10.1"
cryptography = "^44.0.2"
dify-plugin = "^0.0.1b72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
